--- a/public/index.html
+++ b/public/index.html
@@ -45,17 +45,17 @@
 	<main class = "pitch-container">
    
 
-		<div id="utilities" class= "pitch-container"></div>
+		<div id="utilities" class= "pitch-container">Article Container</div>
     		
-			<article class= "pitch"></article>
+			<article class= "pitch">A Pitch goes here</article>
 	
-		<div id= "groceries" class= "pitch-container"></div>
+		<div id= "groceries" class= "pitch-container">Groceries Container</div>
     
-    		<article class= "pitch"></article>
+    		<article class= "pitch">A Pitch goes here</article>
 	
-		<div id = "misc" class= "pitch-container"></div>
+		<div id = "misc" class= "pitch-container">Misc Container</div>
 
-    		<article class= "pitch"></article>
+    		<article class= "pitch">A Pitch goes here</article>
 
 	</main>
 
