--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -42,20 +42,25 @@
 
 
 
-	<main class = "pitch-container">
+	<main class = "pitch-area">
    
 
-		<div id="utilities" class= "pitch-container">Article Container</div>
+		<div id="utilities" class= "pitch-container">Article Container
     		
 			<article class= "pitch">A Pitch goes here</article>
+
+		</div>
 	
-		<div id= "groceries" class= "pitch-container">Groceries Container</div>
+		<div id= "groceries" class= "pitch-container">Groceries Container
     
     		<article class= "pitch">A Pitch goes here</article>
+		</div>
 	
-		<div id = "misc" class= "pitch-container">Misc Container</div>
+		<div id = "misc" class= "pitch-container">Misc Container
 
     		<article class= "pitch">A Pitch goes here</article>
+
+		</div>
 
 	</main>
 
