Added index.js and minor active class to .html and .css Added member select in js

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@ l<!DOCTYPE html>
 				<li class = "navitem">Group Name</li>
 				<li class = "navitem">Members
 					<div class= "member-container">
-						<button class = "member">DG</button>
+						<button class = "member active">DG</button>
 						<button class = "member">BM</button>
 						<button class = "member">CP</button>
 						<button class = "member">ZS</button>
