added pitch box

--- a/public/react.html
+++ b/public/react.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello with React!</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <title>PitchBox with React</title>
+        <link rel="stylesheet" type="text/css" href="box.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Pragati+Narrow" rel="stylesheet">
     </head>
     <body>
         <!--Div for react to render to-->
-        <div id="example"></div>
+        <div id="pitchbox-example"></div>
     </body>
     <!--Dependencies-->
     <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
