--- a/public/react.html
+++ b/public/react.html
@@ -14,5 +14,5 @@
     <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
     <!--Main-->
-    <script src="index.js"></script>
+    <script src="compiled-js/index.js"></script>
 </html>
