Boxes don't go to end of page, everything else works

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -7,8 +7,12 @@ l<!DOCTYPE html>
     <!-- This is a 3rd-party stylesheet for Font Awesome: http://fontawesome.io/ -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen">
 
-    <link rel="stylesheet" href="style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="box.css"/>
+    <link rel="stylesheet" href="style.css" >
 
+
+<!--	media="screen">	-->
+   
 </head>
 <body>
     
@@ -16,8 +20,8 @@ l<!DOCTYPE html>
 	<header>
 		<h1 class = "title">Pitch In!</h1>
 		<ul>
-			<li class "navitem main-items navlink" ><a href = "#">Groups</a></li>
-			<li class "navitem main-items navlink" ><a href = "#">Breakdown</a></li>
+			<li class= "navitem main-items navlink" ><a href = "#">Groups</a></li>
+			<li class= "navitem main-items navlink" ><a href = "#">Breakdown</a></li>
 		
 		</ul>
 
@@ -29,7 +33,7 @@ l<!DOCTYPE html>
 				</li>  
 				<li class = "navitem">Group Name</li>
 				<li class = "navitem">Members
-					<div class= "member-container">
+					<div id= "member-container">
 						<button class = "member active">DG</button>
 						<button class = "member">BM</button>
 						<button class = "member">CP</button>
@@ -53,7 +57,9 @@ l<!DOCTYPE html>
 	
 		<div id= "groceries" class= "pitch-container">Groceries Container
     
-    		<article class= "pitch">A Pitch goes here</article>
+    		<article class= "">
+       			<div id="pitchbox-example"></div>
+		</article>
 		</div>
 	
 		<div id = "misc" class= "pitch-container">Misc Container
@@ -66,5 +72,9 @@ l<!DOCTYPE html>
 
 </body>
 <script src="index.js" charset="utf-8"></script>
+ <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
+    <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+    <!--Main-->
+    <script src="compiled-js/index.js"></script>
 
 </html>
