--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Tweeter</title>
+    <title>Pitch In</title>
 
     <!-- This is a 3rd-party stylesheet for Font Awesome: http://fontawesome.io/ -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen">
 
     <link rel="stylesheet" type="text/css" href="box.css"/>
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="style.css" />
+	<link rel"stylesheet"  href="./header_style.css"/>
 
 
 <!--	media="screen">	-->
