--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" href="box.css"/>
     <link rel="stylesheet" href="style.css" />
-	<link rel"stylesheet"  href="./header_style.css"/>
+	<link rel= "stylesheet"  href="./header_style.css"/>
 
 
 <!--	media="screen">	-->
