--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
 
 
-	<main class = "pitch-area">
+	<main class = "pitch-area" id = "dynamic-pitches">
    
 
 		<div id="utilities" class= "pitch-container">Article Container
@@ -60,9 +60,10 @@
 	
 		<div id= "groceries" class= "pitch-container">Groceries Container
     
-    		<article class= "">
-       			<div id="pitchbox-example"></div>
-		</article>
+	    		<article class= "">
+	       			<div id="pitchbox-example"></div>
+			</article>
+
 		</div>
 	
 		<div id = "misc" class= "pitch-container">Misc Container
