--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -24,7 +25,7 @@
 		<h1 class = "title">PitchIn</h1>
 		<ul>
 			<li class = "navitem main-items navlink" ><a href = "#">Groups</a></li>
-			<li class = "navitem main-items navlink" ><a href = "#">Breakdown</a></li>
+			<li class = "navitem main-items navlink" ><a id = "dynlinkbreakdown" href = "#">Breakdown</a></li>
 
 		</ul>
 
