Minimal changes made

--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,14 @@
 			<ul class = "navlist">
 				<!-- We may want to make some of these buttons....-->
 				<li class = "navitem">
-					<button>Add Charge</button>
+					<button id="add_charge">Add Charge</button>
 				</li>  
-				<li class = "navitem">Group Name</li>
-				<li class = "navitem">Members
-					<div id= "member-container">
+				<li class = "navitem">
+					Group Name
+				</li>
+				<li class = "navitem">
+						Members
+					<div id= "member-container" class = "navdiv" >
 						<button class = "member active">DG</button>
 						<button class = "member">BM</button>
 						<button class = "member">CP</button>
