Add expenses locally!

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen">
 
     <link rel="stylesheet" type="text/css" href="box.css"/>
-    <link rel="stylesheet" href="style.css" >
+	<link rel="stylesheet" type="text/css" href="breakdown.css"/>
+	<link rel="stylesheet" type="text/css" href="modal.css"/>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header_style.css" media="screen">
     <!-- <link rel="stylesheet" href="box.css" media="screen"> -->
 
@@ -32,7 +34,7 @@
 			<ul class = "navlist">
 				<!-- We may want to make some of these buttons....-->
 				<li class = "navitem">
-					<button>Add Charge</button>
+					<button id="add-expense-button">Add Expense</button>
 				</li>
 				<li class = "navitem">Group Name</li>
 				<li class = "navitem">Members
