--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
 				<li class = "navitem">Group Name</li>
 				<li class = "navitem">Members
 					<div id= "member-container">
-						<button class = "member active">DG</button>
-						<button class = "member">BM</button>
-						<button class = "member">CP</button>
-						<button class = "member">ZS</button>
+						<button class = "member active" id="DG">DG</button>
+						<button class = "member" id="BM">BM</button>
+						<button class = "member" id="CP">CP</button>
+						<button class = "member" id="ZS">ZS</button>
 					</div>
 				</li>
 			</ul>
